# slos-rust

./: Cargo.toml  Makefile  README.md  gdbinit_mp
src/: device_driver.rs  main.rs  print.rs  stdio.rs
src/arch/aarch64/: boot.rs  mod.rs  time.rs  vectors.S
src/drivers/: mmio.rs
src/drivers/uart/: uart.rs
src/linker/: kernel64.lds
