# cargo-features = ["edition2024"]

[package]
name = "slos-rust"
version = "0.1.0"
authors = ["Kwangdo Yi<kwangdo.yi@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[features]
default = []
man_registers = ["tock-registers"]

[[bin]]
name = "kernel64"
path = "src/main.rs"

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]

# Optional dependencies
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"], optional = true }

# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { version = "9.x.x" }
