# cargo-features = ["edition2024"]

[package]
name = "slos-rust"
version = "0.1.0"
authors = ["Kwangdo Yi<kwangdo.yi@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[features]
default = []

[[bin]]
name = "kernel-zynqmp-rust"
path = "src/main.rs"

[[bin]]
name = "kernel-rpi4-rust"
path = "src/main.rs"

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]

